# bs-tailwind-ppx

./: README.md  bs-tailwind.js  dune-project  package.json  sync.sh
esy.lock/: index.json
example/: .gitignore  package.json
js/: bs-tailwind.js  package.json  utils.js
js/__tests__/: compiler-tests.js
js/__tests__/__snapshots__/: compiler-tests.js.snap
tailwind-parser/: package.json
test/: TestFile.re  dune
testExe/: dune
